check_output.txt
[1m[92m    Checking[0m backster v0.1.0 (/win/linux/Code/rust/backster)
[1m[91merror[E0432][0m[1m: unresolved import `nautilus_trading::prelude`[0m
 [1m[94m--> [0msrc/strategy/p_value.rs:1:23
  [1m[94m|[0m
[1m[94m1[0m [1m[94m|[0m use nautilus_trading::prelude::*;
  [1m[94m|[0m                       [1m[91m^^^^^^^[0m [1m[91mcould not find `prelude` in `nautilus_trading`[0m

[1m[91merror[E0432][0m[1m: unresolved import `nautilus_trading::prelude`[0m
 [1m[94m--> [0msrc/backtest/engine.rs:2:23
  [1m[94m|[0m
[1m[94m2[0m [1m[94m|[0m use nautilus_trading::prelude::*;
  [1m[94m|[0m                       [1m[91m^^^^^^^[0m [1m[91mcould not find `prelude` in `nautilus_trading`[0m

[1m[91merror[0m[1m: cannot find attribute `nautilus_strategy` in this scope[0m
 [1m[94m--> [0msrc/strategy/p_value.rs:4:3
  [1m[94m|[0m
[1m[94m4[0m [1m[94m|[0m #[nautilus_strategy]
  [1m[94m|[0m   [1m[91m^^^^^^^^^^^^^^^^^[0m

[1m[33mwarning[0m[1m: unused import: `script::WolframRunner`[0m
 [1m[94m--> [0msrc/wolfram/mod.rs:2:9
  [1m[94m|[0m
[1m[94m2[0m [1m[94m|[0m pub use script::WolframRunner;
  [1m[94m|[0m         [1m[33m^^^^^^^^^^^^^^^^^^^^^[0m
  [1m[94m|[0m
  [1m[94m= [0m[1mnote[0m: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

[1m[33mwarning[0m[1m: unused import: `loader::DataLoader`[0m
 [1m[94m--> [0msrc/data/mod.rs:2:9
  [1m[94m|[0m
[1m[94m2[0m [1m[94m|[0m pub use loader::DataLoader;
  [1m[94m|[0m         [1m[33m^^^^^^^^^^^^^^^^^^[0m

[1m[33mwarning[0m[1m: unused import: `crate::features::DistributionFitSnapshot`[0m
 [1m[94m--> [0msrc/strategy/p_value.rs:2:5
  [1m[94m|[0m
[1m[94m2[0m [1m[94m|[0m use crate::features::DistributionFitSnapshot;
  [1m[94m|[0m     [1m[33m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m

[1m[33mwarning[0m[1m: unused import: `crate::strategy::PValueStrategy`[0m
 [1m[94m--> [0msrc/backtest/engine.rs:3:5
  [1m[94m|[0m
[1m[94m3[0m [1m[94m|[0m use crate::strategy::PValueStrategy;
  [1m[94m|[0m     [1m[33m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[0m

[1m[33mwarning[0m[1m: unused import: `engine::BacktestRunner`[0m
 [1m[94m--> [0msrc/backtest/mod.rs:2:9
  [1m[94m|[0m
[1m[94m2[0m [1m[94m|[0m pub use engine::BacktestRunner;
  [1m[94m|[0m         [1m[33m^^^^^^^^^^^^^^^^^^^^^^[0m

[1m[33mwarning[0m[1m: unused import: `ascii::AsciiReporter`[0m
 [1m[94m--> [0msrc/report/mod.rs:2:9
  [1m[94m|[0m
[1m[94m2[0m [1m[94m|[0m pub use ascii::AsciiReporter;
  [1m[94m|[0m         [1m[33m^^^^^^^^^^^^^^^^^^^^[0m

[1mFor more information about this error, try `rustc --explain E0432`.[0m
[1m[33mwarning[0m: `backster` (bin "backster") generated 6 warnings
[1m[91merror[0m: could not compile `backster` (bin "backster") due to 3 previous errors; 6 warnings emitted
